<resources>
    <string name="app_name">گلخونه</string>
    <string name="search">جستجو</string>
    <string name="resultSearch">  نتیجه جستجو</string>
    <string name="mesal">  یکی از گیاهان رایجی که در آپارتمان و منزل نگهداری می شود آلوئه ورا می باشد که علاوه بر زیبایی بخشیدن به خانه ، خواص درمانی فراوانی نیز دارد . بسیاری از افراد که گیاه آلوئه ورا را در منزل نگهداری می کنند ، به جز بهره بردن از زیبایی این گیاه بی درد سر و ساده از برگ های آن برای زیبایی پوست خود استفاده می کنند.

            اگر شما نیز علاقمند به نگهداری از این گیاه هستید اما روش نگهداری از آن را نمی دانید با این بخش از خانه داری نمناک همراه شوید تا درباره پرورش این گیاه اطلاعات بیشتری کسب کنید.

            طریقه نگهداری و پرورش گیاه آلوئه ورا

            آلوئه ورا گیاهی شبیه کاکتوس می باشد که با نام های صبر زرد و در هندوستان به نام «آیورودا» شناخته می شود و شرایط نگهداری و پرورش آن بسیار آسان است . این گیاه به پای ثابت سالن پذیرایی، تراس یا گلخانه های خانگی تبدیل شده است و خواص درمانی زیادی دارد و به صورت خوراکی و موضعی مصرف می شود.
            دمای مناسب نگهداری آلوئه ورا

            آلوئه ورا گیاهی است که بیشتر در مناطق گرمسیری و خشک پرورش می یابد . این گیاه به دمایی بین 17 تا 24 درج سانتی گراد نیاز دارد و در گرما و سرمای شدید آسیب می بیند. اگر دوست دارید در خانه آلوئه ورا نگهداری کنید بهتر است به دمای نگهداری آن توجه نمایید و اگر منطقه زندگی شما روزهای گرم و شب های سردی دارد از پرورش این گیاه صرفه نظر کنید . بهتر در برخی از ساعات روز این گیاه را بیرون از خانه ببرید تا نور خورشید را مستقیما دریافت کند.
    </string>
    <string name="afat_title">
        روش از بین بردن آفت گیاهان
    </string>
    <string name="afat_matn">
        معمولا تمامی کسانی که از گیاهان آپارتمانی نگه داری می کنند شاهد مریضی و عدم رشد گیاه خود شده اند، اگر بتوانید علت بیماری را به موقع تشخیص دهید می تواند از نابود شدن گیاه خود جلوگیری کنید، معمولا بیشترین مشکلی که گیاهان خانگی به آن دچار می شود ابتلا به آفت گیاهان آپارتمانی است که با راهکار های ساده می توانید تا حدودی به گیاهتان کمک کنید.\n
        یکی از رایج ترین و شایع ترین مشکلاتی که می تواند برای گیاهان آپارتمانی اتفاق بیفتد مبتلا شدن به آفت است، زمانی که گیاهتان به آفت دچار می شود معمولا تنها فکری که از ذهن شما عبور می کند از بین بردن آفت گیاهاتان است. که ما در این مطلب نحوه از بین بردن آفت گیاهان آپارتمانی را در اختیار شما قرار خواهیم داد.\n
        منظور از آفت گیاهان آپارتمانی مجموعه از گیاهانی است که در فضای خانه می توانند رشد کنند و یا به دلیل عدم تحمل سرما و گرما باید داخل منزل نگهداری شوند. اگر می خواهید گیاهتان به آفت دچار نشود باید از آن ها به خوبی مراقبت کنید.\n

        آشنایی با آفت گیاهان آپارتمانی و از بین بردن آنها\n
        از رایج ترین آفت گیاهان آپارتمانی می توان به سپرداران، کنه عنکبوتی، شته، شپشک آرد آلو و سفید بالک اشاره کرد که بهترین راه از بین برد آنها سم پاشی ارگانیک و شستشو برگ ها با کف صابون است.\n

        سپرداران: نوعی حشره بسیار ریز و بیضی شکل هستند بدن آن ها توسط یک پوشش سخت محافظت می شود، به همین دلیل تشخیص آن بر روی گیاه به سختی ممکن خواهد بود و شاید با نگاه اول نتوانید متوجه یک موجود زنده بر روی برگ ها شوید. سپری که این حشره بر روی بدن خود دارد می تواند در رنگ های قهوه ای، خاکستری، سفید و یا سیاه باشد. عملکرد این آفت گیاهان آپارتمانی به گونه است که با چسبیدن به ساقه ها شیره گیاه را می مکند و ماده ای براق را بر روی برگ ها به جای می گذارند.\n

        درمان: اگر تعداد این آفات بر روی گیاهتان کم بود می توانید برای از بین بردن آنها از کف صابون استفاده کنید.\n
        اما اگر میزان آفات زیاد تر بود بهتر است از سموم آفت کش استفاده کنید.\n

        شته: شته ها موجودات بسیار ریزی هستند که ۲ الی ۳ میلی متر هستند و در رنگ های قهوه ای، سبز، قرمز، زرد و سیاه وجود دارد، جایگاه شته ها در قسمت پشت برگ و روی قسمت های جوان گیاه است و با مکیدن شیره باعث ضعیف شدن گیاه می شود.\n
        شته ها فقط در برخی از ماه های سال بالدار می شود که از این طریق می توانند در بین گیاهان منتشر شوند. وجود شته بر روی برگ منجر به ایجاد عسلک بر روی گیاه شده که خود باعث می شود تا گیاه به درستی عملیات فتوسنتز را انجام ندهد.\n

        درمان: اگر مقدار کمی شته بر روی گیاهتان دیده می شود بهتر است قسمتی که دچار شته را از گیاه جدا کنید و یا با استفاده از آب به آرامی برگ ها و هر جایی که به شته مبتلا شده است را بشویید تا شته ها از بین بروند اما اگر میزان شته بر روی گیاهتان زیاد بود جوری که رشد گیاه متوقف شده باشد باید از سموم آفت کش استفاده کنید.\n
        شپشک آرد آلو: این آفت بدنش توسط کرک و ماده ای کوکی پوشیده شده است، اگر این آفت روی گیاهتان ایجاد شود در نگاه اول ممکن است همانند یک تکه پنبه کوچک دیده شود، این آفت هم با مکیدن شیره گیاه آن را ضعیف تر می کند.\n

        درمان: برای از بردن این آفت گیاهان آپارتمانی اگر مقدار آنها بر روی گیاه کم بود باید با استفاده از یک پنبه آغشته شده به الکل اقدام به برداشتن آنها از روی گیاه کنید.\n
        در صورت ازدیاد این آفت باید از سم های آفت کش استفاده کنید.\n


        کنه عنکبوتی: این آفت جز آفات بسیار ریز است که به دشواری می توان آن را بر روی گیاه دید.\n
        این آفت معمولا شبیه به نقاط قهوه ای مایل به قرمز دیده می شوند که بر روی تمام گیاه گسترده هستند، شما می توانید با کمی توجه بیشتر بر روی برگ ها متوجه حرکت آنها شوید، از جمله نشانه های وجود این آفت ایجاد لکه های زرد بر روی برگ ها و وجود تار هایی است که بر روی گیاه به وجود می آورد.\n
        وجود این آفت بر روی گیاه باعث از دست رفتن شادابی و نشاط گیاه می شود.\n

        درمان: باید بدانید که یکی از علت هایی که این آفت به گیاهان آپارتمانی حمله ور می شود خشکی و ضعف گیاه است، اگر شما در مورد نگهداری از گیاهان دقت کنید می توانید از ایجاد این آفت جلوگیری کنید.\n
        بهترین راه برای جلوگیری و از بین بردن کنه عنکبوتی آبیاری منظم با آب سرد، بالا نگه داشتن رطوبت هوا است که بعد از مدت کوتاهی این آفت از بین خواهد رفت.\n
        اما اگر میزان حمله آفت ها شدید بود باید از سموم ارگانیک برای از بین بردن این آفت استفاده کنید.\n
        سفید بالک: این حشرات بسیار کوچک هستند حتی اگر تعدادشان هم کم باشد تشخیص آن ها کار سختی می باشد. برای اینکه از وجود آن ها بر روی گیاهتان مطمئن شوید باید گیاهتان را تکان دهید سپس اگر این حشرات وجود داشته باشند خواهید دید که با تکان دادن چگونه به آسمان پرواز می کنند.\n
        وجود این آفت بر روی گیاه همانند شوره های سر بر روی گیاه است.\n
        اگر شما هر چه زودتر به دفع این آفت گیاهان آپارتمانی نپردازید قطعا گیاهتان از بین می رود.

    </string>
    <string name="tavizkhak_title">
        روش تعویض خاک گلدان
    </string>
    <string name="alafharz_title">
        از بین بردن علف هرز
    </string>
    <string name="zardshodanbarg_title">
        زرد شدن برگ درخت ها
    </string>
    <string name="abdadan_title">
        اب دادن به گل گیاه
    </string>
</resources>