<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="rtl"
    android:layout_height="match_parent"
    android:background="@drawable/backamuzesh"
    tools:context=".amuzesh">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <RelativeLayout
                android:layout_width="280dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_back_green_name"
                android:id="@+id/lnr_film">
                <TextView
                    android:id="@+id/txt_name_daste"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="فیلم آموزشی"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="280dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_back_green_name"
                android:id="@+id/lnr_afat">
                <TextView
                    android:id="@+id/afat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/afat_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="280dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_back_green_name"
                android:id="@+id/lnr_taviz">
                <TextView
                    android:id="@+id/tavi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/tavizkhak_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="280dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_back_green_name"
                android:id="@+id/lnr_alafharz">
                <TextView
                    android:id="@+id/alafharz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/alafharz_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="280dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_back_green_name"
                android:id="@+id/lnr_zardshodan">
                <TextView
                    android:id="@+id/zardshodan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/zardshodanbarg_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="280dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_back_green_name"
                android:id="@+id/lnr_abdadan">
                <TextView
                    android:id="@+id/abdadan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/abdadan_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>